Correct button align + Fix article filter dialog box

--- a/src/component/dialog/DialogArticleFilter.css
+++ b/src/component/dialog/DialogArticleFilter.css
@@ -50,3 +50,7 @@
     -webkit-animation: slide-in 0.5s forwards;
 }
 
+.DialogArticleFilter-button {
+	display: inline-block;
+	margin-left: 5px;
+}
